--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-fastapi==0.95.1
+fastapi==0.95.2
 google-search-results==2.4.2
-langchain==0.0.168
-openai==0.27.6
+httpx==0.24.1
+langchain==0.0.175
+openai==0.27.7
 pydantic==1.10.7
+pyodbc==4.0.39
 Requests==2.30.0
+starlette==0.27.0
 uvicorn==0.22.0
