--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 fastapi==0.95.2
 google-search-results==2.4.2
 httpx==0.24.1
-langchain==0.0.175
+langchain==0.0.178
 openai==0.27.7
 pydantic==1.10.7
-pyodbc==4.0.39
-Requests==2.30.0
+Requests==2.31.0
 SQLAlchemy==2.0.12
 starlette==0.27.0
+tiktoken==0.4.0
 uvicorn==0.22.0
