Added missing dependency

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ httpx==0.24.1
 langchain==0.0.178
 openai==0.27.7
 pydantic==1.10.7
+pyodbc==4.0.39
 Requests==2.31.0
 SQLAlchemy==2.0.12
 starlette==0.27.0
