1 use sse for agentsearch (#2)
* Use paramter to collect intermediate steps

* remove warm up request

* impl check-usage func

* refactor using fastapi

* init db

* added user schema

* Fix datetime error

* added completion

* save before unicode problem

* Use temperarory solution

* Added missing dependency

* finished streaming

* Fix some bugs

* Fix small bugs

* Fix systemMessage blank issue

* get ride of hardcoded settings

* seperate code

* fix time out error

* Fix import missing

---------

Co-authored-by: Yuanhao Min <yuanhao21@outlook.com>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,15 @@
                 "main:app"
             ],
             "jinja": true,
-            "justMyCode": true
+            "justMyCode": false
+        },
+        {
+            "name": "Python: Current File",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal",
+            "justMyCode": false
         }
     ]
 }
