--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
-fastapi==0.95.1
+fastapi==0.95.2
 google-search-results==2.4.2
-langchain==0.0.166
-openai==0.27.6
+httpx==0.24.1
+langchain==0.0.184
+openai==0.27.7
 pydantic==1.10.7
-Requests==2.30.0
+pyodbc==4.0.39
+python-dotenv==1.0.0
+Requests==2.31.0
+SQLAlchemy==2.0.12
+starlette==0.27.0
+tiktoken==0.4.0
 uvicorn==0.22.0
