--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 fastapi==0.95.2
 google-search-results==2.4.2
-httpx==0.24.1
-langchain==0.0.184
+langchain==0.0.188
 openai==0.27.7
 pydantic==1.10.7
 pyodbc==4.0.39
+PyPDF2==3.0.1
 python-dotenv==1.0.0
+python-multipart==0.0.6
 Requests==2.31.0
 SQLAlchemy==2.0.12
 starlette==0.27.0
