--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-fastapi==0.95.2
+fastapi==0.96.0
 google-search-results==2.4.2
-langchain==0.0.188
+langchain==0.0.195
+matplotlib==3.7.1
 openai==0.27.7
+pandas==2.0.1
 pydantic==1.10.7
 pyodbc==4.0.39
 PyPDF2==3.0.1
@@ -9,6 +11,7 @@ python-dotenv==1.0.0
 python-multipart==0.0.6
 Requests==2.31.0
 SQLAlchemy==2.0.12
-starlette==0.27.0
+starlette==0.28.0
+tabulate==0.9.0
 tiktoken==0.4.0
 uvicorn==0.22.0
