--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
+pip==23.1.2
 fastapi==0.97.0
 google-search-results==2.4.2
-langchain==0.0.205
+langchain==0.0.206
 matplotlib==3.7.1
-openai==0.27.7
+openai==0.27.8
 pandas==2.0.1
 pydantic==1.10.7
 pyodbc==4.0.39
@@ -11,7 +12,7 @@ python-alipay-sdk==3.3.0
 python-dotenv==1.0.0
 python-multipart==0.0.6
 Requests==2.31.0
-SQLAlchemy==2.0.12
+SQLAlchemy==2.0.16
 starlette
 tabulate==0.9.0
 tiktoken==0.4.0
